cmake_minimum_required(VERSION 3.6)
project(k_r_c)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -std=gnu11")

set(EX1-1-2 chapter_1/ex1-1-2.c)
set(EX1-3-4 chapter_1/ex1-3-4.c)
set(EX1-5 chapter_1/ex1-5.c)
set(EX1-6 chapter_1/ex1-6.c)
set(EX1-7 chapter_1/ex1-7.c)
set(EX1-8 chapter_1/ex1-8.c)
set(EX1-9 chapter_1/ex1-9.c)
set(EX1-10 chapter_1/ex1-10.c)
link_directories(/usr/include)
add_executable(ex1-1-2 ${EX1-1-2})
add_executable(ex1-3-4 ${EX1-3-4})
add_executable(ex1-5 ${EX1-5})
add_executable(ex1-6 ${EX1-6})
add_executable(ex1-7 ${EX1-7})
add_executable(ex1-8 ${EX1-8})
add_executable(ex1-9 ${EX1-9})
add_executable(ex1-10 ${EX1-10})