cmake_minimum_required(VERSION 3.6)
project(k_r_c)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror -std=gnu11")

# Build Chapter 1
add_executable( ch1_ex1 chapter_1/ex1.c)
add_executable( ch1_ex2 chapter_1/ex2.c)
add_executable( ch1_ex3 chapter_1/ex3.c)
add_executable( ch1_ex4 chapter_1/ex4.c)
add_executable( ch1_ex5 chapter_1/ex5.c)
add_executable( ch1_ex6 chapter_1/ex6.c)
add_executable( ch1_ex7 chapter_1/ex7.c)
add_executable( ch1_ex8 chapter_1/ex8.c)
add_executable( ch1_ex9 chapter_1/ex9.c)
add_executable( ch1_ex10 chapter_1/ex10.c)
add_executable( ch1_ex11 chapter_1/ex11.c)